examples/sample-product-chart/chart-test/reports/scenario-gateway-api-istio-gateway-api-basic-20260601-111040-5/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"istio"},"spec":{"controllerName":"istio.io/gateway-controller"}}
    creationTimestamp: "2026-06-01T15:11:15Z"
    generation: 1
    name: istio
    resourceVersion: "680"
    uid: 9e0e122b-76bb-4fa3-93f5-b207d96c84af
  spec:
    controllerName: istio.io/gateway-controller
    description: The default Istio GatewayClass
  status:
    conditions:
    - lastTransitionTime: "2026-06-01T15:11:15Z"
      message: Handled by Istio controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    creationTimestamp: "2026-06-01T15:11:15Z"
    generation: 1
    name: istio-remote
    resourceVersion: "678"
    uid: dc3099bd-453c-4e95-87cb-9e120fa0d36c
  spec:
    controllerName: istio.io/unmanaged-gateway
    description: Remote to this cluster. Does not deploy or affect configuration.
  status:
    conditions:
    - lastTransitionTime: "2026-06-01T15:11:15Z"
      message: Handled by Istio controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
