examples/sample-product-chart/chart-test/reports/scenario-gateway-api-istio-gateway-api-basic-20260601-111040-5/artifacts/manifests/httproutes.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-01T15:11:13Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "684"
    uid: ebf97006-eeb9-46d3-9ec8-8c3aec287282
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sample-gw
      sectionName: http
    rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: sample
        port: 80
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: "2026-06-01T15:11:16Z"
        message: Route was valid
        observedGeneration: 1
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: "2026-06-01T15:11:16Z"
        message: All references resolved
        observedGeneration: 1
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: istio.io/gateway-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: sample-gw
        sectionName: http
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"HTTPRoute","metadata":{"annotations":{},"name":"sample-route","namespace":"sample"},"spec":{"parentRefs":[{"name":"sample-gw","sectionName":"http"}],"rules":[{"backendRefs":[{"name":"sample","port":80}],"matches":[{"path":{"type":"PathPrefix","value":"/"}}]}]}}
    creationTimestamp: "2026-06-01T15:11:16Z"
    generation: 1
    name: sample-route
    namespace: sample
    resourceVersion: "687"
    uid: c6972d8e-e8e4-4b23-963f-f97bbdb670b2
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sample-gw
      sectionName: http
    rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: sample
        port: 80
        weight: 1
      matches:
      - path:
          type: PathPrefix
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: "2026-06-01T15:11:16Z"
        message: Route was valid
        observedGeneration: 1
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: "2026-06-01T15:11:16Z"
        message: All references resolved
        observedGeneration: 1
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: istio.io/gateway-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: sample-gw
        sectionName: http
kind: List
metadata:
  resourceVersion: ""
