examples/sample-product-chart/chart-test/reports/scenario-gateway-api-istio-gateway-api-basic-20260601-111040-5/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-01T15:11:13Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "642"
    uid: 68523bf5-fffc-4dd2-98b1-3269c1353e63
  spec:
    clusterIP: 10.96.3.98
    clusterIPs:
    - 10.96.3.98
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2026-06-01T15:11:16Z"
    labels:
      gateway.istio.io/managed: istio.io-gateway-controller
      gateway.networking.k8s.io/gateway-name: sample-gw
    name: sample-gw-istio
    namespace: sample
    ownerReferences:
    - apiVersion: gateway.networking.k8s.io/v1beta1
      kind: Gateway
      name: sample-gw
      uid: 25298688-7c92-4ff8-b500-f78020d8d947
    resourceVersion: "746"
    uid: 95636e47-8e72-4429-8068-24d7de65e956
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.96.37.110
    clusterIPs:
    - 10.96.37.110
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: PreferDualStack
    ports:
    - appProtocol: tcp
      name: status-port
      nodePort: 31880
      port: 15021
      protocol: TCP
      targetPort: 15021
    - appProtocol: http
      name: http
      nodePort: 31178
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      gateway.networking.k8s.io/gateway-name: sample-gw
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
